# mathematical_robotics

./: .clang-format  .gitignore  LICENSE  README.md  build.sh  clean_build.sh  docker_bringup.sh
.github/workflows/: build.yml
docker/: Dockerfile  docker-compose.yaml
example/: CMakeLists.txt  point_cloud_matching.cpp  point_cloud_to_line_matching.cpp
math_utils/: lie_group.hpp  math_utils.hpp
matplotlibcpp/: matplotlibcpp.hpp
utilities/: ceres_cost_function.hpp  gauss_newton_method.hpp  kd_tree.hpp  line_segment.hpp  math_utils.hpp  plot_helper.hpp
